{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 256,
  "lineage": "31ac3029-e7a5-4168-78ab-6956be021854",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aps2_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aps2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06387df49ac632502",
            "arn": "arn:aws:ec2:ap-southeast-2:737679990112:instance/i-0bb40ebb82fbfa3e3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb40ebb82fbfa3e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-aps2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01bcfe2c03a65cfa3"
              }
            ],
            "primary_network_interface_id": "eni-01bcfe2c03a65cfa3",
            "private_dns": "ip-10-1-1-154.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.154",
            "public_dns": "ec2-13-211-167-221.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.211.167.221",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "ManagedBy": "Terraform"
                },
                "tags_all": {
                  "ManagedBy": "Terraform"
                },
                "throughput": 0,
                "volume_id": "vol-05aad831e135cf4ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0298bee87f38e59f4",
            "tags": {
              "Name": "AP-Southeast-2-Server"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "AP-Southeast-2-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019d91fbbaaaea4d2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "id": "i-0bb40ebb82fbfa3e3",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_security_group.aps2_sg",
            "aws_subnet.aps2_public",
            "aws_vpc.aps2_vpc",
            "data.aws_ami.aps2_al2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "us_east_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03f9680ef0c07a3d1",
            "arn": "arn:aws:ec2:us-east-1:737679990112:instance/i-0ea12b7d24770f260",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea12b7d24770f260",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0aa777b370ffca22e"
              }
            ],
            "primary_network_interface_id": "eni-0aa777b370ffca22e",
            "private_dns": "ip-10-0-1-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.44",
            "public_dns": "ec2-100-30-193-68.compute-1.amazonaws.com",
            "public_ip": "100.30.193.68",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "ManagedBy": "Terraform"
                },
                "tags_all": {
                  "ManagedBy": "Terraform"
                },
                "throughput": 0,
                "volume_id": "vol-0b4354df3928c6166",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08033fbd3913f912f",
            "tags": {
              "Name": "US-East-1-Server"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "US-East-1-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afa9ef4a53f7c025"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "id": "i-0ea12b7d24770f260",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.us_sg",
            "aws_subnet.us_east_public",
            "aws_vpc.us_vpc_east",
            "data.aws_ami.us_east_al2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aps2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aps2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:737679990112:internet-gateway/igw-03354d0449dc2ad54",
            "id": "igw-03354d0449dc2ad54",
            "owner_id": "737679990112",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "ap-southeast-2-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "ap-southeast-2-igw"
            },
            "vpc_id": "vpc-04e45c676c2e92a43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aps2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "us_east_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737679990112:internet-gateway/igw-0dc5806e31faffa06",
            "id": "igw-0dc5806e31faffa06",
            "owner_id": "737679990112",
            "region": "us-east-1",
            "tags": {
              "Name": "us-east-1-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "us-east-1-igw"
            },
            "vpc_id": "vpc-008656c5ceca3bfe3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.us_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "aps2_to_us",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aps2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0abc8d6d9aafddcdb179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0abc8d6d9aafddcdb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0136f86e0d1670a0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0abc8d6d9aafddcdb"
          },
          "dependencies": [
            "aws_internet_gateway.aps2_igw",
            "aws_route_table.aps2_rt",
            "aws_vpc.aps2_vpc",
            "aws_vpc.us_vpc_east",
            "aws_vpc_peering_connection.peer",
            "aws_vpc_peering_connection_accepter.peer_accept"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "us_to_aps2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f7a7a2c8c1c69a7b3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f7a7a2c8c1c69a7b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0136f86e0d1670a0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0f7a7a2c8c1c69a7b"
          },
          "dependencies": [
            "aws_internet_gateway.us_east_igw",
            "aws_route_table.us_east_rt",
            "aws_vpc.aps2_vpc",
            "aws_vpc.us_vpc_east",
            "aws_vpc_peering_connection.peer",
            "aws_vpc_peering_connection_accepter.peer_accept"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aps2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aps2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:737679990112:route-table/rtb-0abc8d6d9aafddcdb",
            "id": "rtb-0abc8d6d9aafddcdb",
            "owner_id": "737679990112",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03354d0449dc2ad54",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ap-southeast-2-public-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "ap-southeast-2-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e45c676c2e92a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "id": "rtb-0abc8d6d9aafddcdb",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.aps2_igw",
            "aws_vpc.aps2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us_east_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737679990112:route-table/rtb-0f7a7a2c8c1c69a7b",
            "id": "rtb-0f7a7a2c8c1c69a7b",
            "owner_id": "737679990112",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc5806e31faffa06",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-public-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "us-east-1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-008656c5ceca3bfe3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "id": "rtb-0f7a7a2c8c1c69a7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.us_east_igw",
            "aws_vpc.us_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aps2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aps2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c62019c4530aaa99",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0abc8d6d9aafddcdb",
            "subnet_id": "subnet-0298bee87f38e59f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.aps2_igw",
            "aws_route_table.aps2_rt",
            "aws_subnet.aps2_public",
            "aws_vpc.aps2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7887def32197f22",
            "region": "us-east-1",
            "route_table_id": "rtb-0f7a7a2c8c1c69a7b",
            "subnet_id": "subnet-08033fbd3913f912f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.us_east_igw",
            "aws_route_table.us_east_rt",
            "aws_subnet.us_east_public",
            "aws_vpc.us_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aps2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aps2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:737679990112:security-group/sg-019d91fbbaaaea4d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019d91fbbaaaea4d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-20251214180349606500000001",
            "name_prefix": "terraform-",
            "owner_id": "737679990112",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e45c676c2e92a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "id": "sg-019d91fbbaaaea4d2",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.aps2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "us_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737679990112:security-group/sg-0afa9ef4a53f7c025",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afa9ef4a53f7c025",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-20251214180346040000000001",
            "name_prefix": "terraform-",
            "owner_id": "737679990112",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-008656c5ceca3bfe3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "id": "sg-0afa9ef4a53f7c025",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.us_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aps2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aps2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:737679990112:subnet/subnet-0298bee87f38e59f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0298bee87f38e59f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737679990112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "ap-southeast-2-public-subnet"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "ap-southeast-2-public-subnet"
            },
            "vpc_id": "vpc-04e45c676c2e92a43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "id": "subnet-0298bee87f38e59f4",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.aps2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737679990112:subnet/subnet-08033fbd3913f912f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08033fbd3913f912f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737679990112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "us-east-1-public-subnet"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "us-east-1-public-subnet"
            },
            "vpc_id": "vpc-008656c5ceca3bfe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "id": "subnet-08033fbd3913f912f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.us_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aps2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aps2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:737679990112:vpc/vpc-04e45c676c2e92a43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-029a610a6cdbf6345",
            "default_route_table_id": "rtb-098fbfacd35e4f159",
            "default_security_group_id": "sg-029c7b009d73b287f",
            "dhcp_options_id": "dopt-08d1ccee98c75c95c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e45c676c2e92a43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098fbfacd35e4f159",
            "owner_id": "737679990112",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "ap-southeast-2-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "ap-southeast-2-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "id": "vpc-04e45c676c2e92a43",
            "region": "ap-southeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "us_vpc_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737679990112:vpc/vpc-008656c5ceca3bfe3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c3d22d841ac1f325",
            "default_route_table_id": "rtb-076829eece002a122",
            "default_security_group_id": "sg-0dd342ab6b8d4b4bc",
            "dhcp_options_id": "dopt-0e8ad04f1bcf03a26",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008656c5ceca3bfe3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076829eece002a122",
            "owner_id": "737679990112",
            "region": "us-east-1",
            "tags": {
              "Name": "us-east-1-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "us-east-1-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990112",
            "id": "vpc-008656c5ceca3bfe3",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": false,
            "id": "pcx-0136f86e0d1670a0d",
            "peer_owner_id": "737679990112",
            "peer_region": "ap-southeast-2",
            "peer_vpc_id": "vpc-04e45c676c2e92a43",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "vpc_id": "vpc-008656c5ceca3bfe3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aps2_vpc",
            "aws_vpc.us_vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer_accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aps2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-0136f86e0d1670a0d",
            "peer_owner_id": "737679990112",
            "peer_region": "ap-southeast-2",
            "peer_vpc_id": "vpc-04e45c676c2e92a43",
            "region": "ap-southeast-2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "vpc_id": "vpc-008656c5ceca3bfe3",
            "vpc_peering_connection_id": "pcx-0136f86e0d1670a0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aps2_vpc",
            "aws_vpc.us_vpc_east",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "aps2_options",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aps2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-0136f86e0d1670a0d",
            "region": "ap-southeast-2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-0136f86e0d1670a0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aps2_vpc",
            "aws_vpc.us_vpc_east",
            "aws_vpc_peering_connection.peer",
            "aws_vpc_peering_connection_accepter.peer_accept"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "us_options",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-0136f86e0d1670a0d",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-0136f86e0d1670a0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aps2_vpc",
            "aws_vpc.us_vpc_east",
            "aws_vpc_peering_connection.peer",
            "aws_vpc_peering_connection_accepter.peer_accept"
          ]
        }
      ]
    }
  ]
}